--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit>=1.25
+streamlit
 pyyaml
 numpy
 pandas
 matplotlib
 plotly
-bokeh==2.4.3
-hvplot<=0.8.4
+bokeh
+hvplot
 geopandas
-networkx<=3.1
-holoviews<=1.16
-panel<=0.14.4
-param<2
+networkx
+holoviews
+panel
+param
 geoviews
 cartopy
 pyproj
