--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 pyyaml
-numpy==1.22
+numpy
 pandas
 matplotlib
 plotly
@@ -17,4 +17,4 @@ pyproj
 scipy
 xarray
 netcdf4
-setuptools>=58.0.0
+scikit-learn
