--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-streamlit
-numpy==1.25.2
-pandas
-matplotlib
-plotly
+streamlit>=1.20
+numpy>=1.24
+pandas>=1.3
+matplotlib>=3.4
+plotly>=5.0
 bokeh==2.4.3
-hvplot
-geopandas
-networkx
-holoviews
-panel
-param
-geoviews
-cartopy
-pyproj
-scipy
-xarray
-netcdf4
-setuptools
+hvplot>=0.8
+geopandas>=0.10
+networkx>=2.6
+holoviews>=1.14
+panel==0.14.4
+param==1.13.0
+geoviews>=1.9
+cartopy>=0.20
+pyproj>=3.0
+scipy>=1.7
+xarray>=0.19
+netcdf4>=1.5
+setuptools>=58.0
