--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,40 +1,61 @@
 tiles: "OSM"
 
+
 tech_colors:
   # wind
   onwind: "#235ebc"
   onshore wind: "#235ebc"
+  Onshore Wind: "#235ebc"
   offwind: "#6895dd"
   offshore wind: "#6895dd"
   offwind-ac: "#6895dd"
   offshore wind (AC): "#6895dd"
+  Offshore Wind (AC): "#6895dd"
   offwind-dc: "#74c6f2"
   offshore wind (DC): "#74c6f2"
+  Offshore Wind (DC): "#74c6f2"
+  Offshore Wind (Floating): "#b5e2fa"
   # water
   hydro: '#298c81'
   hydro reservoir: '#298c81'
+  Reservoir & Dam: '#298c81'
   ror: '#3dbfb0'
   run of river: '#3dbfb0'
+  Run of River: '#3dbfb0'
   hydroelectricity: '#298c81'
   PHS: '#51dbcc'
+  Pumped Hydro Storage: '#51dbcc'
+  pumped hydro storage: '#51dbcc'
   wave: '#a7d4cf'
   # solar
   solar: "#f9d002"
+  Solar: "#f9d002"
   solar PV: "#f9d002"
+  Solar PV: "#f9d002"
   solar thermal: '#ffbf2b'
+  rural solar thermal: '#ffbf2b'
+  #residential rural solar thermal: '#ffbf2b'
+  #urban central solar thermal: '#ffbf2b'
+  #residential urban decentral solar thermal: '#ffbf2b'
+  #urban decentral solar thermal: '#ffbf2b'
   solar rooftop: '#ffea80'
   solar-hsat: '#ffc04c'
   # gas
   OCGT: '#e0986c'
+  Open-Cycle Gas: '#e0986c'
   OCGT marginal: '#e0986c'
   OCGT-heat: '#e0986c'
   gas boiler: '#db6a25'
   gas boilers: '#db6a25'
   gas boiler marginal: '#db6a25'
+  #urban decentral gas boiler: '#db6a25'
+  #rural gas boiler: '#db6a25'
   gas: '#e05b09'
+  Gas: '#e05b09'
   fossil gas: '#e05b09'
   natural gas: '#e05b09'
   CCGT: '#a85522'
+  Combined-Cycle Gas: '#a85522'
   CCGT marginal: '#a85522'
   gas for industry co2 to atmosphere: '#692e0a'
   gas for industry co2 to stored: '#8a3400'
@@ -44,7 +65,10 @@ tech_colors:
   gas pipeline new: '#a87c62'
   # oil
   oil: '#c9c9c9'
+  Oil: '#c9c9c9'
   oil boiler: '#adadad'
+  #rural oil boiler: '#adadad'
+  #urban decentral oil boiler: '#adadad'
   agriculture machinery oil: '#949494'
   agriculture machinery: '#abdeff'
   shipping oil: "#808080"
@@ -61,14 +85,20 @@ tech_colors:
   coal: '#545454'
   Coal marginal: '#545454'
   coal for industry: '#4a4a4a'
+  coal demand: '#4a4a4a'
   solid: '#545454'
   Lignite: '#826837'
   lignite: '#826837'
   Lignite marginal: '#826837'
   # biomass
+  Biogas: '#e3d37d'
   biogas: '#e3d37d'
   biogas upgrading: '#e3d37d'
+  biogas to gas: '#e3d37d'
+  unsustainable biogas: '#e3d37d'
   biomass: '#baa741'
+  biomass CC: '#baa741'
+  biomass demand: '#baa741'
   biomass boiler: '#baa741' #
   unsustainable solid biomass: '#91854B' #
   solid biomass: '#baa741'
@@ -79,33 +109,52 @@ tech_colors:
   solid biomass CHP CC: '#aeb841'
   solid biomass for industry co2 from atmosphere: '#736412'
   solid biomass for industry co2 to stored: '#47411c'
-  unsustainable bioliquids: '#8A6B2A' #
+  unsustainable bioliquids: '#8A6B2A' 
+  bioliquids: '#8A6B2A' 
   # power transmission
   lines: '#6c9459'
   transmission lines: '#6c9459'
   electricity distribution grid: '#97ad8c'
+  AC: '#97ad8c'
+  DC: '#97ad8c'
   # electricity demand
   Electric load: '#110d63'
   electric demand: '#110d63'
   electricity: '#110d63'
+  residential electricity: '#110d63'
   industry electricity: '#2d2a66'
+  industry electricity demand: '#2d2a66'
   industry new electricity: '#2d2a66'
   agriculture electricity: '#494778'
   agriculture: '#494778'
   # battery + EVs
   battery: '#ace37f'
   battery storage: '#ace37f'
+  Battery Storage: '#ace37f'
+  battery charger: '#ace37f'
+  battery discharger: '#ace37f'
   home battery: '#80c944'
   home battery storage: '#80c944'
+  home battery discharger: '#80c944'
+  home battery charger: '#80c944'
+  EV battery: '#baf238'
   BEV charger: '#baf238'
   V2G: '#e5ffa8'
   land transport EV: '#baf238'
   Li ion: '#baf238'
+  battery electric vehicles: '#baf238'
   # hot water storage
   water tanks: '#e69487'
+  water tanks charger: '#e69487'
+  water tanks discharger: '#e69487'
   hot water storage: '#e69487'
   hot water charging: '#e69487'
   hot water discharging: '#e69487'
+  #urban central water tanks: '#e69487'
+  #rural water tanks: '#e69487'
+  #residential urban decentral water tanks: '#e69487'
+  #residential rural water tanks: '#e69487'
+  #urban decentral water tanks: '#e69487'
   # heat demand
   Heat load: '#cc1f1f'
   heat: '#cc1f1f'
@@ -120,7 +169,11 @@ tech_colors:
   heat pumps: '#2fb537'
   heat pump: '#2fb537'
   air heat pump: '#36eb41'
+  #urban central air heat pump: '#36eb41'
+  #urban decentral air heat pump: '#36eb41'
+  #residential urban decentral air heat pump: '#36eb41'
   ground heat pump: '#2fb537'
+  #rural ground heat pump: '#2fb537'
   Ambient: '#98eb9d'
   gas CHP: '#8a5751'
   CHP: '#8a5751'
@@ -130,6 +183,9 @@ tech_colors:
   CHP electric: '#8a5751'
   district heating: '#e8beac'
   resistive heater: '#d8f9b8'
+  #urban decentral resistive heater: '#d8f9b8'
+  #rural resistive heater: '#d8f9b8'
+  #residential urban decentral resistive heater: '#d8f9b8'
   retrofitting: '#8487e8'
   building retrofitting: '#8487e8'
   # hydrogen
@@ -137,27 +193,34 @@ tech_colors:
   H2 for shipping: "#ebaee0"
   H2: '#bf13a0'
   hydrogen: '#bf13a0'
+  hydrogen demand: '#bf13a0'
   SMR: '#870c71'
   SMR CC: '#4f1745'
   steam methane reforming: '#870c71'
   steam methane reforming CC: '#4f1745'
+  steam methane reforming carbon capture: '#4f1745'
   H2 liquefaction: '#d647bd'
   hydrogen storage: '#bf13a0'
   H2 storage: '#bf13a0'
   land transport fuel cell: '#6b3161'
   H2 pipeline: '#f081dc'
+  hydrogen pipeline: '#f081dc'
   H2 pipeline retrofitted: '#ba99b5'
   H2 Fuel Cell: '#c251ae'
   H2 Electrolysis: '#ff29d9'
+  H2 electrolysis: '#ff29d9'
   power-to-hydrogen: '#ff29d9'
   H2 Store: '#9c2a8d' 
   # syngas
   Sabatier: '#9850ad'
+  Methanation: '#c44ce6'
+  power-to-methane: '#c44ce6'
   methanation: '#c44ce6'
   methane: '#c44ce6'
   helmeth: '#e899ff'
   # synfuels
   Fischer-Tropsch: '#25c49a'
+  fischer-tropsch: '#25c49a'
   liquid: '#25c49a'
   kerosene for aviation: '#a1ffe6'
   aviation fuels: '#a1ffe6'
@@ -170,6 +233,7 @@ tech_colors:
   shipping fuels: '#468c8b'
   shipping methanol emissions: '#468c8b'
   methanol emissions: '#468c8b'
+  liquid hydrocarbon: '#25c49a'
   # co2
   CC: '#f29dae'
   carbon capture: '#f29dae'
@@ -183,6 +247,7 @@ tech_colors:
   CO2 pipeline: '#f5627f'
   # emissions
   process emissions CC: '#000000'
+  process emissions carbon capture: '#000000'
   process emissions: '#222222'
   process emissions to stored: '#444444'
   process emissions to atmosphere: '#888888'
@@ -201,6 +266,7 @@ tech_colors:
   gas-to-power/heat: '#ee8340'
   waste: '#e3d37d'
   other: '#000000'
+  others: '#000000'
   import pipeline-h2: '#fff6e0'
   import shipping-lh2: '#ebe1ca'
   import shipping-lch4: '#d6cbb2'
@@ -208,53 +274,44 @@ tech_colors:
   import hvdc: '#91856a'
   fossil oil and gas: '#ababab'
   green e-fuel imports: '#03a2ff'
-preferred_order:
-  - H2 storage
-  - hydrogen storage
-  - battery storage
-  - BEV charger
-  - V2G
-  - hot water storage
-  - co2
-  - hydroelectricity
-  - hydro reservoir
-  - pumped hydro storage
-  - run of river
-  - transmission lines
-  - electricity distribution grid
-  - solid biomass
-  - biogas
+  ammonia: '#03a2ff'
+  haber-bosch: '#03a2ff'
+
+preferred_order_energy_balance:
+  - solar PV
   - onshore wind
   - offshore wind
-  - offshore wind (AC)
-  - offshore wind (DC)
-  - solar PV
-  - solar thermal
-  - solar rooftop
-  - solar
-  - building retrofitting" "ground heat pump
-  - air heat pump
-  - heat pump
-  - resistive heater
-  - power-to-heat
-  - gas-to-power/heat
-  - CHP
-  - OCGT
-  - gas boiler
+  - hydroelectricity
+  - biomass
   - gas
-  - natural gas
-  - helmeth
-  - methanation
-  - power-to-gas
-  - power-to-H2
-  - H2 pipeline
-  - H2 pipeline retrofitted
-  - gas pipeline
-  - gas pipeline new
-  - H2 liquefaction
+  - oil 
+  - nuclear
+  - coal
+  - lignite
+  - residential electricity
+  - industry electricity
+  - heat
+  - power-to-heat
+  - power-to-hydrogen
   - power-to-liquid
-  - CO2 sequestration
-  - CCS
+  - methanation
+  - steam methane reforming
+  - haber-bosch
+  - hydrogen
+  - methane
+  - biomass
+  - liquid hydrocarbon
+  - ammonia
+  - coal
+  - battery electric vehicles
+  - direct air capture
+  - carbon capture
+  - hydrogen pipeline
+  - pumped hydro storage
+  - hydrogen storage
+  - hot water storage
+  - process emissions carbon capture
+  - others
 
 spatial:
   nodal_options:
@@ -346,11 +403,19 @@ operation:
     24H: daily
     168H: weekly
 
-scenarios:
+EU_scenarios:
   energy: Energy Balance (TWh/a)
   hydrogen: Hydrogen Balance (TWh/a)
   costs: Total System Costs (bn€/a)
   co2: Carbon Dioxide Balance (MtCO2/a)
+  generation: Generation Capacities (GW)
+  storage: Storage Capacities (TWh)
+  conversion: Conversion Capacities (GW)
+
+DE_scenarios:
+  energy: Energy Balance (TWh/a)
+  hydrogen: Hydrogen Balance (TWh/a)
+  costs: Total System Costs (bn€/a)
   generation: Generation Capacities (GW)
   storage: Storage Capacities (TWh)
   conversion: Conversion Capacities (GW)
