remove biomass generators due to input power counting

--- a/data/config.yaml
+++ b/data/config.yaml
@@ -18,6 +18,7 @@ tech_colors:
   hydro: '#298c81'
   hydro reservoir: '#298c81'
   Reservoir & Dam: '#298c81'
+  reservoir & dam: '#298c81'
   ror: '#3dbfb0'
   run of river: '#3dbfb0'
   Run of River: '#3dbfb0'
@@ -55,6 +56,7 @@ tech_colors:
   natural gas: '#e05b09'
   CCGT: '#a85522'
   Combined-Cycle Gas: '#a85522'
+  combined-cycle gas: '#a85522'
   CCGT marginal: '#a85522'
   gas for industry co2 to atmosphere: '#692e0a'
   gas for industry co2 to stored: '#8a3400'
@@ -223,8 +225,10 @@ tech_colors:
   fischer-tropsch: '#25c49a'
   liquid: '#25c49a'
   kerosene for aviation: '#a1ffe6'
+  kerosene: '#a1ffe6'
   aviation fuels: '#a1ffe6'
   naphtha for industry: '#57ebc4'
+  naphtha: '#57ebc4'
   methanolisation: '#83d6d5'
   methanolisation4: '#79c8c5'
   methanol: '#468c8b'
